--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/fuel_control
 spring.datasource.username=root
 spring.datasource.password=Arya@91084764
 spring.jpa.hibernate.ddl-auto=update
+springdoc.swagger-ui.path=/
+
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
